# bulk_insert_sqlserver_tiberius

./: Cargo.toml  README.md  tables.sql
src/: lib.rs  sql_functions.rs
